<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/victoryImage"
        android:layout_toEndOf="@+id/victoryImage"
        android:id="@+id/linearLayout3">

        <TextView
            android:text="@string/you_found_all_the_mines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/foundAllprompt"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <TextView
            android:text="@string/scans_used"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scansScore"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <TextView
            android:text="@string/hi_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hiScoreText"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:text="@string/games_played"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gamesPlayedText"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="130dp"
        android:paddingTop="10dp"
        app:srcCompat="@drawable/wallbreaker_image_2"
        android:id="@+id/victoryImage"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>