<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniellee.myapplication.PlayActivity"
    android:background="@drawable/background_4">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableForButtons"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/of_mines_discovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minesFound"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/of_scans_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scansUsed"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/hi_score_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal|bold"
                android:id="@+id/hiScoreText" />

            <TextView
                android:text="@string/played"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalGamesPlayedTV"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textStyle="normal|bold" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
