<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniellee.myapplication.MenuActivity"
    android:background="@drawable/background_1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/airballons_image"
        android:id="@+id/background_ballon_image"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="140dp"
        android:visibility="visible"
        android:layout_marginStart="350dp"
        android:layout_marginLeft="350dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/ballons_in_background" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/wallbreaker_image"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/skeleton_flying_image"
        android:layout_marginStart="400dp"
        android:layout_marginLeft="400dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/skeleton_flying_with_bomb" />

    <TextView
        android:text="@string/main_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/main_menu_header"
        android:textSize="45sp"
        android:textStyle="normal|bold|italic"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:paddingTop="20dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/wallbreaker_image_2"
        android:id="@+id/skeleton_with_bomb_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="450dp"
        android:paddingEnd="450dp"
        android:paddingTop="100dp"
        android:paddingBottom="40dp"
        android:paddingLeft="0dp"
        android:paddingStart="0dp"
        android:contentDescription="@string/skeleton_with_bomb_in_arm" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_button"
            android:layout_marginTop="105dp"
            android:layout_alignParentTop="true"
            android:paddingLeft="100dp"
            android:paddingRight="100dp"
            android:layout_alignRight="@+id/options_button"
            android:layout_alignEnd="@+id/options_button"
            android:layout_alignLeft="@+id/options_button"
            android:layout_alignStart="@+id/options_button"
            android:textStyle="normal|bold|italic"
            android:textAlignment="center"
            android:elevation="0dp" />

        <Button
            android:text="@string/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_button"
            android:layout_below="@+id/options_button"
            android:paddingRight="100dp"
            android:paddingLeft="100dp"
            android:layout_alignLeft="@+id/options_button"
            android:layout_alignStart="@+id/options_button"
            android:layout_alignRight="@+id/options_button"
            android:layout_alignEnd="@+id/options_button"
            android:textStyle="normal|bold|italic"
            android:textAlignment="center" />

        <Button
            android:text="@string/options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/options_button"
            android:paddingRight="100dp"
            android:paddingLeft="100dp"
            android:layout_below="@+id/play_button"
            android:layout_centerHorizontal="true"
            android:textStyle="normal|bold|italic"
            android:textAlignment="center" />

    </RelativeLayout>

</RelativeLayout>
