<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniellee.myapplication.MainActivity"
    android:background="@drawable/background_1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/mine_seeker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/mine_seeker_header"
            android:textStyle="normal|bold|italic"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <TextView
            android:text="@string/by_daniel_lee_ahad_ejaz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/author_name"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_below="@+id/mine_seeker_header"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/loading_image"
            android:id="@+id/loading_image"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/loadingimageanimation"
            android:padding="60dp" />

        <Button
            android:text="@string/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/skip_button"
            android:textStyle="normal|bold|italic"
            android:layout_marginRight="400dp"
            android:layout_marginEnd="400dp"
            android:layout_marginTop="230dp" />

    </RelativeLayout>

</RelativeLayout>
